# ravrosr

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  cleanup  configure  configure.win  cran-comments.md
.github/workflows/: R-CMD-check.yaml  lint.yaml
R/: ravrosr-package.R  wrappers.R
man/: avro_deserialize.Rd  avro_deserialize_local.Rd  avro_serialize.Rd  avro_serialize_local.Rd  kafka_flush.Rd  kafka_produce.Rd  kafka_produce_text.Rd  kafka_producer.Rd  ravrosr-package.Rd  sr_check_compatibility.Rd  sr_connect.Rd  sr_delete_subject.Rd  sr_get_schema.Rd  sr_get_schema_by_id.Rd  sr_list_subjects.Rd  sr_register_schema.Rd
ravrosr/: DESCRIPTION  NAMESPACE  README.md  configure.win
ravrosr/R/: wrappers.R
ravrosr/man/: sr_check_compatibility.Rd  sr_register_schema.Rd
ravrosr/src/: Makevars.in
ravrosr/src/rust/: Cargo.toml
ravrosr/src/rust/src/: client.rs  serde_avro.rs
src/: Makevars  Makevars.in  Makevars.win  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: conversions.rs  kafka_producer.rs  lib.rs  registry_ops.rs  runtime.rs  serde_avro.rs  serde_local.rs
tests/: testthat.R
tests/testthat/: test-local-avro.R
