[package]
name = "ravrosr"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.8"
apache-avro = "0.21"
schema_registry_converter = { version = "4.7", default-features = false, features = ["easy", "avro", "futures", "native_tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
once_cell = "1"
base64 = "0.22"
